debugged alignment issue

--- a/Guestbook/wwwroot/css/site.css
+++ b/Guestbook/wwwroot/css/site.css
@@ -19,8 +19,7 @@ main, footer, nav {
 .photo {
 	background-image: url('/img/default.png');
 	background-size: 4.7rem;
-	height: 4.7rem;
-	width: 4.7rem;
+	height: 5rem;
 	background-repeat: no-repeat;
 	background-position: center top;
 }
